fix: set fab-aside-bar to position:fixed (for working on mobile devices)

--- a/src/app/pages/contacts/contact-list/contact-list.scss
+++ b/src/app/pages/contacts/contact-list/contact-list.scss
@@ -161,8 +161,9 @@ ui-button {
 
 // ── Mobile FABs ──────────────────────────────────────
 .fab-container {
-  position: sticky;
-  bottom: 4.5rem;
+  position: fixed;
+  bottom: 6rem;
+  right: 1.5em;
   z-index: 10;
   display: flex;
   flex-direction: column;
